[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantmodel"
version = "0.1.0"
description = "plant model"
authors = [{name = "David Grier", email = "david@wenodata.com"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pvlib",
    "netCDF4",
    "siphon",
    "pandas",
    "awscli",
    "flake8",
    "python-dotenv",
    "seaborn",
    "ray[default]",
    "ipykernel",
    "notebook",
    "jupyter>=1.1.1",
    "boto3>=1.38.27",
    "awswrangler>=3.12.0",
]


[tool.setuptools]
packages = ["plant_model", "forecast", "database"]
